<resources>
    <string name="ventilator_app_name">ventilator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ventilator_hello_blank_fragment">Hello blank fragment</string>
    <string name="ventilator_back">返回</string>
    <string name="ventilator_home">主页</string>
    <string name="ventilator_delete">删除</string>
    <string name="ventilator_recipe_detail">菜谱详情</string>
    <string name="ventilator_settting">系统设置</string>
    <string name="ventilator_personal">个人中心</string>
    <string name="ventilator_product">产品中心</string>
    <string name="ventilator_setting_time">时间设置</string>
    <string name="ventilator_net_connect">网络连接</string>
    <string name="ventilator_reset">恢复出厂</string>
    <string name="ventilator_screen_brightness">屏幕亮度</string>
    <string name="ventilator_performance">标准</string>
    <string name="ventilator_comfort">舒适</string>
    <string name="ventilator_login_phone">手机登录</string>
    <string name="ventilator_login_password">密码登录</string>
    <string name="ventilator_login_qrcode">二维码登录</string>
    <string name="ventilator_verifycode">验证码</string>
    <string name="ventilator_input_phone_hint">请输入手机号</string>
    <string name="ventilator_input_verifycode_hint">请输入验证码</string>
    <string name="ventilator_get_verifycode">获取验证码</string>
    <string name="ventilator_login_qrcode_hint">请打开ROKI APP扫一扫分享</string>
    <string name="ventilator_login">登 录</string>
    <string name="ventilator_not_login">未登录</string>
    <string name="ventilator_login_exit">退出登录</string>
    <string name="ventilator_net_set">网络设置</string>
    <string name="ventilator_ok">确 认</string>
    <string name="ventilator_cancel">取 消</string>
    <string name="ventilator_login_exit_hint">确认退出该账号</string>
    <string name="ventilator_open_net">开启网络</string>
    <string name="ventilator_auto_connect">自动连接</string>
    <string name="ventilator_add_product">添加产品</string>
    <string name="ventilator_add_more_products">请您添加更多产品</string>
    <string name="ventilator_air_flow">风量</string>
    <string name="ventilator_air_speed">风速</string>
    <string name="ventilator_reset_hint">恢复出厂设置后，\n将删除个人设置信息</string>
    <string name="ventilator_reset_ok">确认恢复出厂设置</string>
    <string name="ventilator_reset_ing">恢复中</string>
    <string name="ventilator_reseted">已恢复出厂设置</string>
    <string name="ventilator_donot_cut_power">(请勿断电)</string>
    <string name="ventilator_about_saleservice">关于售后</string>
    <string name="ventilator_about_product">关于产品</string>
    <string name="ventilator_product_model">产品型号</string>
    <string name="ventilator_sys_version">固件版本号</string>
    <string name="ventilator_app_version">系统版本号</string>
    <string name="ventilator_net">网络</string>
    <string name="ventilator_password">密码</string>
    <string name="ventilator_input_password">输入密码</string>
    <string name="ventilator_join">加入</string>
    <string name="ventilator_auto_set">自动设置</string>
    <string name="ventilator_exit_simple_mode">退出极简模式</string>
    <string name="ventilator_skip">跳过</string>
    <string name="ventilator_smart_setting">智能设置</string>
    <string name="ventilator_reset_start">恢复初始</string>
    <string name="ventilator_offline">离线</string>
    <string name="ventilator_online">在线</string>
    <string name="ventilator_clean_oil_hint">油烟机导风板已处于锁定状态，\n您可放心拆卸、清洗油网</string>
    <string name="ventilator_clean_oil_auto_hint">检查当前油网状态需要清洗\n确认进入清洗状态，可以放心拆卸清洗油网</string>
    <string name="ventilator_delay_close_hint">系统检测到燃气灶已关闭\n油烟机将在%s后自动关机</string>
    <string name="ventilator_match_hint1">1.旋转右旋钮或点击面板上[联网]，选中联网模式。\n2.短按右侧旋钮，屏幕内智能符号\" \"闪烁。\n3.在ROKI中，添加XG858，并确保与当前账号一致。</string>
    <string name="ventilator_match_hint3">1.长按明火自动翻炒锅锅柄上[标记]， 至屏幕内智能符号\" \"闪烁。\n完成上述操作后点击下一步。</string>
    <string name="ventilator_match_hint4">1.燃气灶点火。 \n2.长按燃气灶面板上\" \"2秒至滴声响，屏幕内智能符号\" \"闪烁。\n完成上述操作后点击下一步。</string>
    <string name="ventilator_match_hint6">1.开启洗碗机。 \n2.在洗碗机上登录当前ROKI账户。 \n完成上述操作后点击下一步。</string>
    <string name="ventilator_match_hint7">1.开启一体机。 \n2.在一体机上登录当前ROKI账户。 \n完成上述操作后点击下一步。</string>
    <string name="ventilator_match_hint8">1.开启消毒柜。 \n2.在消毒柜上登录当前ROKI账户。 \n完成上述操作后点击下一步。</string>
    <string name="ventilator_lock">长按2s解锁</string>
    <string name="ventilator_connectting">网络连接中</string>
    <string name="ventilator_account">账号</string>
    <string name="ventilator_input_password_hint">请输入密码</string>
    <string name="ventilator_simple_mode_hint">切换至极简模式</string>
    <string name="ventilator_save_set">保存设置</string>
    <string name="ventilator_share">分享控制权</string>
    <string name="ventilator_add">添加</string>
    <string name="ventilator_next_step">下一步</string>
    <string name="ventilator_request_failed">请求失败</string>
    <string name="ventilator_connect_failed">网络连接失败</string>
    <string name="ventilator_match_ing">配对中...</string>
    <string name="ventilator_rematch">重新配对</string>
    <string name="ventilator_delete_user_hint">确认删除该账号</string>
    <string name="ventilator_delete_device_hint">确认删除该设备</string>
    <string name="ventilator_not_administrator">您不是管理员</string>
    <string name="ventilator_share_hint">请打开ROKI APP, 扫一扫分享</string>
    <string name="ventilator_smart_reset_hint">确认恢复初始设置</string>
    <string name="ventilator_detail">查看详情</string>
    <string name="ventilator_check_connect_status">请检查网络\n连接状态</string>
    <string name="ventilator_right_stove">右灶</string>
    <string name="ventilator_left_stove">左灶</string>
    <string name="ventilator_close_fire">关火</string>
    <string name="ventilator_net_err">网络错误</string>
    <string name="ventilator_pause">暂停</string>
    <string name="ventilator_continue">继续</string>
    <string name="ventilator_low_battery">电量不足</string>
    <string name="ventilator_holiday_desc_set">%s天未使用油烟机，油烟机自动开启换气功能\n换气时间为%s，换气时长为3分钟</string>
    <string name="ventilator_shutdown_delay_set">油烟机将延迟%s分钟关机</string>
    <string name="ventilator_shutdown_now">立即关机</string>
    <string name="ventilator_relation">关联</string>
    <string name="ventilator_relationed">已关联</string>
    <string name="ventilator_new_version">更新到最新版本V%s</string>
    <string name="ventilator_update_version_hint">确认更新到新版本</string>
    <string name="ventilator_update">更新</string>
    <string name="ventilator_updating">版本更新中</string>
    <string name="ventilator_donot_delete_this">不能删除当前账号</string>
    <string name="ventilator_product_failure">产品故障</string>
    <string name="ventilator_cleaning_completion">清洁完成</string>
    <string name="ventilator_disinfect_completion">消毒完成</string>
    <string name="ventilator_cabinet_completion">结束</string>
    <string name="ventilator_products_center">欢迎使用\nROKI数字厨电创造者i7</string>
    <string name="ventilator_delete_device">删除设备</string>
    <string name="ventilator_maintain_phone">维修电话：658889789</string>
    <string name="ventilator_warning_e1_title">报警信息</string>
    <string name="ventilator_warning_e1_content">电源电压异常</string>
    <string name="ventilator_warning_e2_content">点击启动故障</string>
    <string name="ventilator_warning_e3_content">电机运行故障</string>
    <string name="ventilator_warning_e4_content">电源板故障</string>
    <string name="ventilator_warning_e5_content">灯光故障</string>
    <string name="ventilator_warning_e6_content">推杆电机故障</string>
    <string name="ventilator_appoint_finish">结束预约</string>
    <string name="ventilator_start_cook">开始烹饪</string>
    <string name="ventilator_add_success">添加成功</string>
    <string name="ventilator_child_lock">设备童锁已开启，请先解锁</string>
    <string name="ventilator_close_door_prompt">门未关好，无法开启工作</string>
    <string name="ventilator_error_password">密码错误，请重新输入</string>
</resources>