<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ventilator_ic_bg"
    tools:context=".ui.activity.MatchNetworkActivity">

    <include
        android:id="@+id/ll_title"
        layout="@layout/ventilator_view_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_device"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_28"
        android:layout_marginBottom="@dimen/dp_70"
        android:layout_marginLeft="@dimen/dp_108"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_title"
        app:layout_constraintRight_toRightOf="@id/ventilator_guideline9"/>

    <TextView
        android:id="@+id/tv_match_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_32"
        android:text="@string/ventilator_match_hint1"
        android:textColor="@color/ventilator_mode"
        android:layout_marginLeft="@dimen/dp_77"
        android:layout_marginRight="@dimen/dp_130"
        android:lineSpacingExtra="@dimen/dp_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ventilator_guideline9"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="@dimen/dp_175"
        android:layout_height="@dimen/dp_56"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_24"
        android:gravity="center"
        android:textColor="@color/ventilator_white"
        android:textSize="@dimen/sp_30"
        android:text="@string/ventilator_next_step"
        android:background="@drawable/ventilator_shape_button_bg_ok"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="@dimen/dp_175"
        android:layout_height="@dimen/dp_56"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_24"
        android:gravity="center"
        android:textColor="@color/ventilator_white"
        android:textSize="@dimen/sp_30"
        android:text="@string/ventilator_ok"
        android:visibility="gone"
        android:background="@drawable/ventilator_shape_button_bg_ok"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ventilator_guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>